# PiAssistant

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
deploy/: README.md  claude-hooks.json  mosquitto.conf  piassistant-kiosk.service  piassistant.service  setup.sh
deploy/jetson-camera/: README.md  camera_service.py  install.sh  jetson-camera.service
docs/: claude-session-monitor.md  linkedin-sessions-post.md  local-llm-plan.md  news-dashboard-widget.md  rover-build-plan.md  rover-design.md
src/piassistant/: __main__.py  config.py  main.py
src/piassistant/api/: app.py  middleware.py  routes_assistant.py  routes_feed.py  routes_health.py  routes_hooks.py  routes_kiosk.py  routes_pico.py  routes_terminal.py  routes_voice.py
src/piassistant/brain/: agent.py  tools.py
src/piassistant/cli/: repl.py
src/piassistant/services/: base.py  cache.py  calendar.py  camera.py  grocery.py  llm.py  network.py  news.py  orders.py  quote.py  reminders.py  storage.py  sysmon.py  timers.py  todo.py  tts.py  weather.py
src/piassistant/static/: index.html
src/piassistant/static/css/: dashboard.css
src/piassistant/static/js/: dashboard.js
tests/: test_api.py  test_auth.py  test_brain.py  test_calendar.py  test_grocery.py  test_network.py  test_orders.py  test_quote.py  test_services.py  test_storage.py  test_sysmon.py  test_tasks.py  test_tts.py
