[project]
name = "piassistant"
version = "0.1.0"
description = "Smart assistant on Raspberry Pi 5 with Claude AI brain"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "anthropic>=0.42",
    "httpx>=0.28",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
piassistant = "piassistant.main:run_server"
piassistant-cli = "piassistant.main:run_cli"
